# MagicWand

./: .gitignore  LICENSE  README.html  README.md  README.txt  Utils.py  __init__.py  click_tool.py  confirm_dialog.py  conftest.py  image_analyzer.py  magic_wand.py  magic_wand_dialog.py  magic_wand_dialog_base.ui  magic_wand_dockwidget.py  magic_wand_dockwidget_base.ui  magic_wand_dockwidget_ui.pyaaaa  metadata.txt  polygon_maker.py  preview_session.py  pyproject.toml  resources.py  resources.qrc  test.pgw
.github/: FUNDING.yml
.github/workflows/: lint.yaml  release.yaml  test.yaml
processing_provider/: polygonize_algorithm.py  provider.py
tests/: test_click_tool.py  test_confirm_dialog.py  test_dockwidget.py  test_image_analyzer.py  test_metadata.py  test_polygon_maker.py  test_preview_session.py  test_processing_algorithm.py
